python-django-media-lint (0.1.7) unstable;urgency=low

  * created method for verify files duplicate.
  * change code to verify if join file is already exist in link list. If exist, the code raise InvalidNameError exception 

 -- Claudio e Andre <jose.cluadio@corp.globo.com>  Mon, 07 Mar 2010 17:17:00 -0300


python-django-media-lint (0.1.6) unstable; urgency=low

  * turning render method atomic.

 -- Márcio Duarte <maethorin@gmail.com>  Mon, 01 Mar 2010 14:44:00 -0300

python-django-media-lint (0.1.5) unstable; urgency=low

  * Including django cache to avoid resolve process on each call.

 -- Márcio Duarte <maethorin@gmail.com>  Mon, 01 Mar 2010 14:44:00 -0300

python-django-media-lint (0.1.4) unstable; urgency=low

  * new version.

 -- Gabriel Falcão Gonçalves de Moura <gabriel@nacaolivre.org>  Thu, 26 Nov 2009 15:07:08 -0200

python-django-media-lint (0.1.3) unstable; urgency=low

  * new version.

 -- Gabriel Falcão Gonçalves de Moura <gabriel@nacaolivre.org>  Wed, 25 Nov 2009 19:11:56 -0200

python-django-media-lint (0.1.2) unstable; urgency=low

  * New release.

 -- Gabriel Falcão <gabriel@nacaolivre.org>  Mon, 23 Nov 2009 15:31:18 -0200

python-django-media-lint (0.1) unstable; urgency=low

  * Initial release.

 -- Gabriel Falcão <gabriel@nacaolivre.org>  Wed, 18 Nov 2009 21:36:34 -0200